Change analyze response to provide a cancel object